...
        android:layout_height="@dimen/team_logo_in_list"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/x_small"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/team1_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/team1_score"
        android:layout_toRightOf="@+id/team1_logo"
        android:gravity="right"
...
        android:layout_toRightOf="@id/match_team_separator"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        tools:text="0" />

    <TextView
        android:id="@+id/team2_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/team2_logo"
        android:layout_toRightOf="@id/team2_score"
        tools:text="Leicester" />
...
