...
            android:layout_height="?attr/actionBarSize"
            app:layout_anchor="@id/frame_layout_title"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <TextView
                android:id="@+id/collapsed_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/match_score_toolbar_title" />

...
